Fixing editor height on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,11 @@ body {
   }
 
   .container_editor_area {
-    max-height: 200px;
+    tab-size: 4ch;
+    max-height: 35vh;
+    overflow: auto;
+    margin: 1.67em 0;
+    min-width: 50%;
   }
 }
 
@@ -63,14 +67,13 @@ body {
     display: flex;
     justify-content: normal;
   }
-}
-
-.container_editor_area {
-  tab-size: 4ch;
-  max-height: 75vh;
-  overflow: auto;
-  margin: 1.67em 0;
-  min-width: 50%;
+  .container_editor_area {
+    tab-size: 4ch;
+    max-height: 75vh;
+    overflow: auto;
+    margin: 1.67em 0;
+    min-width: 50%;
+  }
 }
 
 .container_editor_tools {
